Bug 88316 - XWayland [weston 1.6.0] takes all CPU and is very slow on eee-pc because of Glamor
Summary: XWayland [weston 1.6.0] takes all CPU and is very slow on eee-pc because of G...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/glamor (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 86815 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-12 09:27 UTC by Mildred Ki'Lya
Modified: 2015-12-17 09:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mildred Ki'Lya 2015-01-12 09:27:08 UTC
I have reported a performance bug on XWayland that was caused by Glamor. Details are available on bug #86815. perf report shows that the most time consuming routines are:

Overhead Command  Shared Object     Symbol
28.77%   Xwayland i915_dri.so       [.] fetch_vector4
19.88%   swapper  [kernel.kallsyms] [k] intel_idle
15.43%   Xwayland i915_dri.so       [.] _mesa_execute_program
12.57%   Xwayland i915_dri.so       [.] store_vector4

Other routines are below 5%

Hardware is reported as:

00:02.0 VGA compatible controller: Intel Corporation Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller
00:02.1 Display controller: Intel Corporation Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller

Device id is respectively 8086:a011 and 8086:a012

Someone said on the original bug report:

> You may be right here. This Eee PC is using pineview platform which
> doesn't have hardware vertex shader support. So all the vertex shader
> fallbacks to CPU side, it becomes extremly slow then.

I only have a performance problem using XWayland. Running Xorg itself is fine (I suppose it uses the intel driver directly then)

XWayland should work right out of the box, so either this performance problem could be fixed in Glamor, and it should be done. Or glamor should detect such situation and tell XWayland, so it could disable glamor.
Comment 1 Olivier Fourdan 2015-02-06 07:49:53 UTC
Patch to address this issue:

http://lists.x.org/archives/xorg-devel/2015-February/045527.html
Comment 2 Olivier Fourdan 2015-12-17 09:10:50 UTC
Patch was merged a while ago, closing.
Comment 3 Olivier Fourdan 2015-12-17 09:12:42 UTC
*** Bug 86815 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.